--- a/static/css/home/about.css
+++ b/static/css/home/about.css
@@ -93,6 +93,10 @@
         background-blend-mode: multiply;
     }
 
+    #header-about{
+        font-size: 45px;
+    }
+
     #about .container{
         display: flex;
         justify-content: center;
