--- a/static/css/home/header.css
+++ b/static/css/home/header.css
@@ -76,10 +76,6 @@
         align-items: center;
     }
 
-    #header-about{
-        font-size: 45px;
-    }
-
     .header-content{
         height: 354px;
         color: white;
@@ -91,9 +87,10 @@
     }
 
     .header-content h1{
-        font-size: 40px;
+        font-size: 45px;
         font-weight: 700;
         margin: 0;
+        text-align: center;
     }
 
     .header-content h2{
@@ -104,7 +101,7 @@
     .header-content h4{
         width: 900px;
         margin: 0 auto;
-        font-size: 20px;
+        font-size: 23px;
         font-weight: 400;
         margin-bottom: 35px;
         opacity: .9;
@@ -112,12 +109,12 @@
     }
 
     .btn-main{
-        width: 200px;
+        width: 220px;
         height: 50px;
+        font-size: 20px;
         border: none;
-        margin-top: 20px;
+        margin-top: 50px;
         border-radius: 5px;
-        font-size: 18px;
         font-weight: 700;
         background-color: rgb(68, 163, 68);
         transition: all .3s ease;
