--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,9 @@
     <!-- Swiper --><script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- Own scripts -->
-    <script defer src="{{url_for('static',filename='js//gallery.js')}}"></script>
-    <script defer src="{{url_for('static',filename='js//swiper-gallery.js')}}"></script>
-    <script defer src="{{url_for('static',filename='js//swiper-about.js')}}"></script>
+    <script defer src="{{url_for('static',filename='js/gallery.js')}}"></script>
+    <script defer src="{{url_for('static',filename='js/swiper-gallery.js')}}"></script>
+    <script defer src="{{url_for('static',filename='js/swiper-about.js')}}"></script>
 
     
     <title>МБОУ СОШ №9</title>
@@ -252,7 +252,7 @@
     
     <section id="contact">
         <div class="container">
-            <h1 style="text-align: center; padding:20px 0;">Контакты</h1>
+            <h1 style="text-align: center; padding:20px 0;" class="header-anim">Контакты</h1>
             <div class="row">
                 <div class="col-7">
                     <div id="map">
@@ -271,7 +271,7 @@
                     <p>Почтовый индекс: 678906</p>
                 </div>
                     <div id="social" style="margin-left: 20px;">
-                        <h5>Мы с социальных сетях</h5>
+                        <h5>Мы в социальных сетях</h5>
                         <a href="https://vk.com/share.php?url=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"><img src="{{url_for('static', filename='img/icons/vk.png')}}"></a>
                         <a href="https://www.instagram.com/school9_aldan/"> <img src="{{url_for('static', filename='img/icons/instagram.png')}}"></a>
                         <a href="https://www.facebook.com/sharer.php?src=sp&u=https%3A%2F%2Fschool-9.saha.eduru.ru%2Fkontakti&title=%D0%A1%D1%80%D0%B5%D0%B4%D0%BD%D1%8F%D1%8F%20%D0%BE%D0%B1%D1%89%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%88%D0%BA%D0%BE%D0%BB%D0%B0%20%E2%84%96%209%20%7C%20%D0%9A%D0%BE%D0%BD%D1%82%D0%B0%D0%BA%D1%82%D1%8B&utm_source=share2"> <img src="{{url_for('static', filename='img/icons/facebook.png')}}"></a>
