--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--------------------------------------------------------->
-    <!--                         META                        -->
-    <!--------------------------------------------------------->
+    <!-- META -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="shortcut icon" href="{{url_for('static', filename='img/school.png')}}">
 
-    <!--------------------------------------------------------->
-    <!--                        FONTS                        -->
-    <!--------------------------------------------------------->
+    <!----------------------------------->
+    <!--             FONTS             -->
+    <!----------------------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
 
-    <!--------------------------------------------------------->
-    <!--                        CSS                          -->
-    <!--------------------------------------------------------->
-    <!-- Bootstrap --><link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap-grid.min.css')}}">
-    <!-- Swiper --><link rel="stylesheet" href="{{url_for('static', filename='swiper-bundle.min.css')}}">
+    <!----------------------------------->
+    <!--              CSS              -->
+    <!----------------------------------->
+    <!-- Bootstrap --><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Swiper --><link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <!-- Index.css --><link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
-    <!-- Navbar.css --><link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
 
 
-    <!--------------------------------------------------------->
-    <!--                        JS                           -->
-    <!--------------------------------------------------------->
-    <!-- Bootstrap --><script defer src="{{url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
-    <!-- jQuery --><script defer src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
+    <!----------------------------------->
+    <!--              JS               -->
+    <!----------------------------------->
+    <!-- Bootstrap --><script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swiper --><script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script defer src="{{url_for('static',filename='js/index.js')}}"></script>
-
+    <!-- jQuery --><script defer src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
+    <!-- Index.js --><script defer src="{{url_for('static',filename='js/index.js')}}"></script>
     
     <title>МБОУ СОШ №9</title>
 </head>
@@ -208,7 +204,7 @@
 
     <section id="about">
         <div class="container">
-            <h1 id="header-about">Информация о нас</h1>
+            <h1 id="header-about" class="header-anim">Информация о нас</h1>
             <div class="swiper-about">
                 <div class="swiper-wrapper">
                 {%for i in range(data_teachers|length)%}
