--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" href="{{url_for('static', filename='img/school.png')}}">
+    <link rel="shortcut icon" href="{{url_for('static', filename='img/home/school.png')}}">
 
     <!----------------------------------->
     <!--             FONTS             -->
@@ -245,18 +245,18 @@
             <h1 style="text-align: center; padding:20px 0;" class="header-anim">Контакты</h1>
             <div class="row">
                 <div class="col-7">
-                    <div id="map">
-                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adea9e19c826c544e6b93d3cde315d7ed301003fa94df820f24badd47ec20e552&amp;width=622&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+                    <div id="block-map">
+                        <script id="map" type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adea9e19c826c544e6b93d3cde315d7ed301003fa94df820f24badd47ec20e552&amp;max-width=622&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
                 <div class="col-5">
                     <div style="margin-left: 20px;">
                     <h2>Контактная информация:</h2>
-                    <div class="line1"></div>
+                    <div class="line"></div>
                     <p>Адрес: Саха (Якутия) Республика Алдан г Солнечный мкр, Молодежная ул, д.10</p>
                     <p>Номер: +7 (41145) 3-86-40</p>
                     <p>Время работы: пн-сб 08:00–18:00<p>
-                        <p>E-mail: mbousosh9galdan@rambler.ru</p>
+                    <p>Почта: mbousosh9galdan@rambler.ru</p>
                     <p>Директор: Шитикова Людмила Юрьевна</p>
                     <p>Почтовый индекс: 678906</p>
                 </div>
